--- a/.github/workflows/working-dir-and-shells.yaml
+++ b/.github/workflows/working-dir-and-shells.yaml
@@ -12,8 +12,8 @@ jobs:
                 echo $GITHUB_SHA 
                 echo $GITHUB_REPOSITORY
                 echo $GITHUB_WORKSPACE
-    display-wd-infos:
-        runs-on: ubuntu-latest
+    display-wd-info-windows:
+        runs-on: windows-latest
         steps:
             - name: Display Working Directory and List FilesS
               run: |
