--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -13,5 +13,5 @@ jobs:
           git remote add origin "https://$GITHUB_ACTION:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git fetch origin
           git checkout main
-      - name: List Files After
+      - name: List Files Afterr
         run: ls -a
