--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -3,15 +3,15 @@ on: [push]
 
 jobs:
   checkout-and-display-files:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     steps:
       - name: List Files Before
         run: ls -a
       - name: Checkout
         run: |
           git init
-          git remote add origin "https://$GITHUB_ACTION:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git fetch origin
           git checkout main
-      - name: List Files Afterr
+      - name: List Files After
         run: ls -a
