update pr comment

--- a/.github/workflows/pr-comment.yaml
+++ b/.github/workflows/pr-comment.yaml
@@ -2,18 +2,17 @@ name: Pull Request Comment
 on:
   pull_request_target:
     types: [opened]
-
 jobs:
   pr-comment:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     steps:
-      - name: Comment On New PRs
+      - name: Comment on New PRs
         uses: actions/github-script@v6
         with:
           script: |
             github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: 'Thanks for contributing!',
-            })
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: 'Thanks for contributing!',
+            });
