--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -22,7 +22,7 @@ jobs:
           echo "JOB_LEVEL_ENV=$RANDOM" >> "$GITHUB_ENV"
       - name: Multiline Env Vars
         run: |
-          DELIMITER= -join (1..15 | ForEach {[char]((48..57)+(65..90)+(97..122) | Get-Random)})
+          DELIMITER=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "RANDOM_JOKE<<$DELIMITER" >> "$GITHUB_ENV"
           echo "Here is a joke:" >> "$GITHUB_ENV"
           curl -s https://icanhazdadjoke.com/ >> "$GITHUB_ENV"
